--- a/service/package.json
+++ b/service/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/webprogramming260/simon-db#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongodb": "^4.12.0"
+    "mongodb": "^4.16.0",
+    "npm": "^9.6.4",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   }
 }
