--- a/service/package.json
+++ b/service/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "simon-db",
+  "name": "simon-service",
   "version": "1.0.0",
-  "description": "This demonstrates creating an HTTP service that provides service endpoints. We use this to provide endpoints for getting and updating the scores.",
+  "description": "This demonstrates a service for a web application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/webprogramming260/simon-db.git"
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/webprogramming260/simon-db/issues"
-  },
-  "homepage": "https://github.com/webprogramming260/simon-db#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongodb": "^4.16.0",
-    "npm": "^9.6.4",
+    "mongodb": "^4.12.0",
     "uuid": "^9.0.0",
-    "ws": "^8.13.0"
+    "ws": "^8.12.0"
   }
 }
